# orion-explorer-browser

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json
Oficial_flux/: index.html
Oficial_flux/docs/: architecture.html  changelog.html  features.html  getting-started.html  index.html
electron/: main.cjs  preload.cjs
flux-backend/: .env.example  package-lock.json  package.json
flux-backend/src/: index.ts
flux-backend/src/config/: database.ts  env.ts  security.ts
flux-backend/src/controllers/: searchController.ts  userController.ts
flux-backend/src/middleware/: errorHandler.ts  rateLimit.ts
flux-backend/src/routes/: proxyRoutes.ts  searchRoutes.ts
flux-backend/src/services/: authService.ts  encryptionService.ts  geminiService.ts
flux-engine/: Cargo.toml  build.rs
flux-engine/src/api/: mod.rs
orion-backend/: .gitignore  package-lock.json  package.json
orion-backend/prisma/: schema.prisma
orion-backend/src/: index.ts
orion-backend/src/config/: database.ts  env.ts  security.ts
src/: App.css  App.tsx  index.css  main.tsx
src/contexts/: AuthContext.tsx  AuthProvider.tsx  FavoritesContext.tsx  ThemeContext.tsx  auth-context.ts  definitions-favorite.ts  theme-definitions.ts
src/hooks/: useAuth.ts  useBrowserNavigation.ts  useFavorite.ts  useFocusBlocker.ts  useMediaGallery.ts  useMenuData.ts  useNavigationHistory.ts  useSearchEngine.ts  useTabs.ts  useTheme.ts
src/lib/: window.ts
src/pages/: FocusBlockedPage.tsx  Login.tsx
src/services/: api.ts  geminiClient.ts  ocrService.ts  voiceService.ts
src/types/: browser.ts  speech.d.ts
(+82 files in other folders)
